Restructured Project and refactored out .NetStandard Library containing package structure

--- a/CleanVSOfflineInstallDirectory/CleanVSOfflineInstallDirectory.csproj
+++ b/CleanVSOfflineInstallDirectory/CleanVSOfflineInstallDirectory.csproj
@@ -6,4 +6,8 @@
     <StartupObject>CleanVSOfflineInstallDirectory.Program</StartupObject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VSOfflineInstallerPackageDirectorySturcture\VSOfflineInstallerPackageDirectorySturcture.csproj" />
+  </ItemGroup>
+
 </Project>
